[tool.poetry]
name = "advent-of-code"
version = "0.1.0"
description = ""
authors = ["JAGS <78938133+JoseAngelGarciaSanchez@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
ipykernel = "^6.27.1"
pandas = "^2.1.3"
scikit-learn = "^1.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
